--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,6 +6,7 @@
     <title>Main page of widget demo</title>
 </head>
 <body>
-    It works!
+    <h1>It works!</h1>
+    <div id="react-root"></div>
 </body>
 </html>
