--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,12 +1,15 @@
 <!DocType html>
 <html>
+
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./style.css">
     <script type="text/javascript" src="./index.js"></script>
     <title>Main page of widget demo</title>
 </head>
+
 <body>
-    <h1>It works!</h1>
     <div id="react-root"></div>
 </body>
+
 </html>
