使 gulp 可以批次建置多個 ts 檔案

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./style.css">
-    <script type="text/javascript" src="./index.js"></script>
+    <script type="text/javascript" src="./index.bundle.js"></script>
     <title>Main page of widget demo</title>
 </head>
 
