為準備 scroll indicator 練習的環境, 將 IconBar 練習移到 portfolio 頁面上

--- a/src/html/portfolio.html
+++ b/src/html/portfolio.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./portfolio-style.css">
     <script type="text/javascript" src="./portfolio.bundle.js"></script>
     <title>My Portfolio</title>
 </head>
 
 <body>
-    <h1>My Portfolio</h1>
     <div id="react-root"></div>
 </body>
 
